@@ -1784,6 +1784,517 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"rawtypes"
+argument_list|)
+annotation|@
+name|Test
+DECL|method|TestSucceedAndFailedCopyMap ()
+specifier|public
+parameter_list|<
+name|K
+parameter_list|,
+name|V
+parameter_list|>
+name|void
+name|TestSucceedAndFailedCopyMap
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|JobConf
+name|job
+init|=
+operator|new
+name|JobConf
+argument_list|()
+decl_stmt|;
+name|job
+operator|.
+name|setNumMapTasks
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+comment|//mock creation
+name|TaskUmbilicalProtocol
+name|mockUmbilical
+init|=
+name|mock
+argument_list|(
+name|TaskUmbilicalProtocol
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Reporter
+name|mockReporter
+init|=
+name|mock
+argument_list|(
+name|Reporter
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|FileSystem
+name|mockFileSystem
+init|=
+name|mock
+argument_list|(
+name|FileSystem
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|Reducer
+argument_list|>
+name|combinerClass
+init|=
+name|job
+operator|.
+name|getCombinerClass
+argument_list|()
+decl_stmt|;
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+comment|// needed for mock with generic
+name|CombineOutputCollector
+argument_list|<
+name|K
+argument_list|,
+name|V
+argument_list|>
+name|mockCombineOutputCollector
+init|=
+operator|(
+name|CombineOutputCollector
+argument_list|<
+name|K
+argument_list|,
+name|V
+argument_list|>
+operator|)
+name|mock
+argument_list|(
+name|CombineOutputCollector
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|TaskAttemptID
+name|mockTaskAttemptID
+init|=
+name|mock
+argument_list|(
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|TaskAttemptID
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|LocalDirAllocator
+name|mockLocalDirAllocator
+init|=
+name|mock
+argument_list|(
+name|LocalDirAllocator
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|CompressionCodec
+name|mockCompressionCodec
+init|=
+name|mock
+argument_list|(
+name|CompressionCodec
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Counter
+name|mockCounter
+init|=
+name|mock
+argument_list|(
+name|Counter
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|TaskStatus
+name|mockTaskStatus
+init|=
+name|mock
+argument_list|(
+name|TaskStatus
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Progress
+name|mockProgress
+init|=
+name|mock
+argument_list|(
+name|Progress
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|MapOutputFile
+name|mockMapOutputFile
+init|=
+name|mock
+argument_list|(
+name|MapOutputFile
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Task
+name|mockTask
+init|=
+name|mock
+argument_list|(
+name|Task
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+name|MapOutput
+argument_list|<
+name|K
+argument_list|,
+name|V
+argument_list|>
+name|output
+init|=
+name|mock
+argument_list|(
+name|MapOutput
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|ShuffleConsumerPlugin
+operator|.
+name|Context
+argument_list|<
+name|K
+argument_list|,
+name|V
+argument_list|>
+name|context
+init|=
+operator|new
+name|ShuffleConsumerPlugin
+operator|.
+name|Context
+argument_list|<
+name|K
+argument_list|,
+name|V
+argument_list|>
+argument_list|(
+name|mockTaskAttemptID
+argument_list|,
+name|job
+argument_list|,
+name|mockFileSystem
+argument_list|,
+name|mockUmbilical
+argument_list|,
+name|mockLocalDirAllocator
+argument_list|,
+name|mockReporter
+argument_list|,
+name|mockCompressionCodec
+argument_list|,
+name|combinerClass
+argument_list|,
+name|mockCombineOutputCollector
+argument_list|,
+name|mockCounter
+argument_list|,
+name|mockCounter
+argument_list|,
+name|mockCounter
+argument_list|,
+name|mockCounter
+argument_list|,
+name|mockCounter
+argument_list|,
+name|mockCounter
+argument_list|,
+name|mockTaskStatus
+argument_list|,
+name|mockProgress
+argument_list|,
+name|mockProgress
+argument_list|,
+name|mockTask
+argument_list|,
+name|mockMapOutputFile
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|TaskStatus
+name|status
+init|=
+operator|new
+name|TaskStatus
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|getIsMap
+parameter_list|()
+block|{
+return|return
+literal|false
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|addFetchFailedMap
+parameter_list|(
+name|TaskAttemptID
+name|mapTaskId
+parameter_list|)
+block|{       }
+block|}
+decl_stmt|;
+name|Progress
+name|progress
+init|=
+operator|new
+name|Progress
+argument_list|()
+decl_stmt|;
+name|ShuffleSchedulerImpl
+argument_list|<
+name|K
+argument_list|,
+name|V
+argument_list|>
+name|scheduler
+init|=
+operator|new
+name|ShuffleSchedulerImpl
+argument_list|<
+name|K
+argument_list|,
+name|V
+argument_list|>
+argument_list|(
+name|job
+argument_list|,
+name|status
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+name|progress
+argument_list|,
+name|context
+operator|.
+name|getShuffledMapsCounter
+argument_list|()
+argument_list|,
+name|context
+operator|.
+name|getReduceShuffleBytes
+argument_list|()
+argument_list|,
+name|context
+operator|.
+name|getFailedShuffleCounter
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|MapHost
+name|host1
+init|=
+operator|new
+name|MapHost
+argument_list|(
+literal|"host1"
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|TaskAttemptID
+name|failedAttemptID
+init|=
+operator|new
+name|TaskAttemptID
+argument_list|(
+operator|new
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|TaskID
+argument_list|(
+operator|new
+name|JobID
+argument_list|(
+literal|"test"
+argument_list|,
+literal|0
+argument_list|)
+argument_list|,
+name|TaskType
+operator|.
+name|MAP
+argument_list|,
+literal|0
+argument_list|)
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|TaskAttemptID
+name|succeedAttemptID
+init|=
+operator|new
+name|TaskAttemptID
+argument_list|(
+operator|new
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|TaskID
+argument_list|(
+operator|new
+name|JobID
+argument_list|(
+literal|"test"
+argument_list|,
+literal|0
+argument_list|)
+argument_list|,
+name|TaskType
+operator|.
+name|MAP
+argument_list|,
+literal|1
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+comment|// handle output fetch failure for failedAttemptID, part I
+name|scheduler
+operator|.
+name|hostFailed
+argument_list|(
+name|host1
+operator|.
+name|getHostName
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// handle output fetch succeed for succeedAttemptID
+name|long
+name|bytes
+init|=
+operator|(
+name|long
+operator|)
+literal|500
+operator|*
+literal|1024
+operator|*
+literal|1024
+decl_stmt|;
+name|scheduler
+operator|.
+name|copySucceeded
+argument_list|(
+name|succeedAttemptID
+argument_list|,
+name|host1
+argument_list|,
+name|bytes
+argument_list|,
+literal|0
+argument_list|,
+literal|500000
+argument_list|,
+name|output
+argument_list|)
+expr_stmt|;
+comment|// handle output fetch failure for failedAttemptID, part II
+comment|// for MAPREDUCE-6361: verify no NPE exception get thrown out
+name|scheduler
+operator|.
+name|copyFailed
+argument_list|(
+name|failedAttemptID
+argument_list|,
+name|host1
+argument_list|,
+literal|true
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|copyMessage (int attemptNo, double rate1, double rate2)
 specifier|private
 specifier|static
